--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/standalone": "^7.29.1",
     "@google/genai": "^0.7.0",
     "framer-motion": "^12.23.26",
     "phosphor-react": "^1.4.1",
