feat(Stage): Integrate react-live for live code editing
Replaces custom Babel transformation logic with `react-live` for a more robust and feature-rich live code editing experience within the Stage component. This change also updates dependencies to include `react-live` and exports core and package components for use in the live editor scope.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^12.23.26",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-live": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
