feat: Enhance AI agent and improve prototype rendering
Introduces several improvements to the AI agent's capabilities and the prototype rendering process.

Key changes include:
- **Custom Code Display:** The prototype now correctly displays custom code when the component type is 'custom'.
- **AI Agent System Instruction:** The AI agent's system prompt has been updated to better guide code generation for a 'react-live' environment, including instructions for 'noInline' and the `render()` function.
- **Error Handling:** Implemented an `ErrorBoundary` in the Stage component to gracefully handle rendering errors in custom components and provide user feedback.
- **Confetti Animation:** Added confetti as a tool for the AI agent to use, enhancing the prototype's dynamism and user experience.
- **Element Anatomy Hook Refinement:** Improved the `useElementAnatomy` hook for more robust measurement of element dimensions and scaling.
- **Dependency Updates:** Added and updated dependencies for `canvas-confetti`, `@types/canvas-confetti`, and `react-error-boundary`.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@babel/standalone": "^7.29.1",
     "@google/genai": "^0.7.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.26",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.2.3",
+    "react-error-boundary": "^6.1.1",
     "react-live": "^4.1.8"
   },
   "devDependencies": {
